# scopewarden

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  agentscope.html  agentscope.yaml  agentscope_tui_redesign_plan.md  scopewarden.yaml
.claude-plugin/: marketplace.json
.cursor/rules/: agentscope.md  scopewarden.md
.github/: copilot-instructions.md
.github/workflows/: pages.yml  release.yml
agentscopescafffolde/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agentscope.yaml
agentscopescafffolde/docs/: TUI_VISUAL_SPEC.md
agentscopescafffolde/src/: audit.rs  config.rs  git.rs  judge.rs  output.rs  policy.rs  session.rs  tui.rs
docs/: agent-aware-monitoring.md  index.html  interview-prep.html  quickstart.md  terminal_mockup.html
plugins/agentscope/: .mcp.json  CLAUDE.md
plugins/agentscope/.claude-plugin/: marketplace.json  plugin.json
plugins/agentscope/skills/scope-check/: SKILL.md
plugins/agentscope/skills/scope-guard/: SKILL.md
plugins/scopewarden/: .mcp.json  CLAUDE.md
plugins/scopewarden/.claude-plugin/: marketplace.json  plugin.json
plugins/scopewarden/skills/scope-check/: SKILL.md
plugins/scopewarden/skills/scope-guard/: SKILL.md
src/: agents.rs  assistant_sessions.rs  audit.rs  chat.rs  cli.rs  config.rs  git.rs  hooks.rs  judge.rs  launchers.rs  main.rs  models.rs  output.rs  policy.rs  session.rs  theme.rs  tui.rs
tests/: cli_test.rs
