[package]
name = "agentscope"
version = "0.1.0"
edition = "2021"
authors = ["AgentScope Contributors"]
description = "Scope firewall and audit layer for AI coding agents"
license = "MIT"
repository = "https://github.com/yourusername/agentscope"
keywords = ["ai", "agents", "git", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "agentscope"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }

# Terminal UI & styling
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = "0.28"
indicatif = "0.17"

# Rich terminal output (colors, bold, etc.)
console = "0.15"
owo-colors = "4"

# Git integration
git2 = { version = "0.19", default-features = false }

# File system watching
notify = "6.1"
ignore = "0.4"         # gitignore-aware walker (same as ripgrep uses)

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Session state
ulid = "1"             # sortable unique session IDs
chrono = { version = "0.4", features = ["serde"] }

# LLM judge (local Ollama + optional cloud)
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Path matching / policy rules
globset = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
